--- a/ui/src/locales/en.json
+++ b/ui/src/locales/en.json
@@ -8,7 +8,7 @@
     "thisyear": "This year", 
     "alltime": "All Time",
     "noattachments": "No Attachments so far",
-    "attachments": "Anhänge",
+    "attachments": "Attachments",
     "choosefile": "Choose File",
     "addattachment": "Add Attachment",
     "sharedwith": "Shared with",
@@ -16,7 +16,7 @@
     "you": "You",
     "addfillup": "Add Fillup",
     "createfillup": "Create Fillup",
-    "deletefillup": "Lösche diese Tankfüllung",
+    "deletefillup": "Delete this fillup",
     "addexpense": "Add Expense",
     "createexpense": "Create Expense",
     "deleteexpense": "Delete this expense",
@@ -136,6 +136,7 @@
     "showunprocessed": "Show unprocessed only",
     "unprocessed": "unprocessed",
     "sitesettingdesc": "Update site level settings. These will be used as default values for new users.",
+    "settingdesc": "These will be used as default values whenever you create a new fillup or expense.",
     "areyousure": "Are you sure you want to do this?",
     "adduser": "Add User",
     "usercreatedsuccessfully": "User Created Successfully",
