translating fuelly import page

--- a/ui/src/locales/de.json
+++ b/ui/src/locales/de.json
@@ -125,8 +125,23 @@
     "delete": "Löschen",
     "importdata": "Importiere Daten in Hammond",
     "importdatadesc": "Wähle eine der folgenden Optionen um Daten in Hammond zu importieren",
-    "import": "Importiere",
+    "import": "Importieren",
     "importcsv": "Wenn du {name} nutzt um deine Fahrzeugdaten zu verwalten, exportiere die CSV Datei aus {name} und klicke hier zum importieren.",
+    "choosecsv": "CSV auswählen",
+    "choosephoto": "Foto auswählen",
+    "importsuccessfull": "Daten erfolgreich importiert",
+    "importerror": "Beim importieren der Datei ist ein Fehler aufgetreten. Details findest du in der Fehlermeldung",
+    "importfrom": "Importiere von {name}",
+    "stepstoimport": "Schritte um Daten aus {name} zu importieren",
+    "choosecsvimport": "Wähle die {name} CSV aus und klicke den Button zum importieren.",
+    "dontimportagain": "Achte darauf, dass du die Datei nicht erneut importierst, da dies zu wiederholten Einträgen führen würde.",
+    "checkpointsimportcsv": "Wenn du alle diese Punkte überprüft hast kannst du unten die CSV importieren.",
+    "importhintunits": "Vergewissere dich ebenfalls, dass die <u>Kraftstoffeinheit</u> und der <u>Kraftstofftyp</u> im Fahrzeug richtig eingestellt sind.",
+    "importhintcurrdist": "Stelle sicher, dass die <u>Währung</u> und die <u>Entfernungseinheit</u> in Hammond korrekt eingestellt sind. Der Import erkennt die Währung nicht automatisch aus der CSV-Datei, sondern verwendet die für den Benutzer eingestellte Währung.",
+    "importhintnickname": "Vergewissere dich, dass der Fahrzeugname in Hammond genau mit dem Namen in der Fuelly-CSV-Datei übereinstimmt, sonst funktioniert der Import nicht.",
+    "importhintvehiclecreated": "Vergewissere dich, dass du die Fahrzeuge bereits in Hammond erstellt hast.",
+    "importhintcreatecsv": "Exportiere deine Daten aus {name} im CSV-Format. Die Schritte dazu findest du",
+    "here": "hier",
     "unprocessedquickentries": "Du hast einen Schnelleintrag zum bearbeiten. | Du hast {0} Schnelleinträge zum bearbeiten.",
     "show": "Anzeigen",
     "loginerror": "Bei der Anmeldung ist ein Fehler aufgetreten. {msg}",
