--- a/ui/src/locales/en.json
+++ b/ui/src/locales/en.json
@@ -130,6 +130,21 @@
     "importdatadesc": "Choose from the following options to import data into Hammond",
     "import": "Import",
     "importcsv": "If you have been using {name} to store your vehicle data, export the CSV file from {name} and click here to import.",
+    "choosecsv": "Choose CSV",
+    "choosephoto": "Choose Photo",
+    "importsuccessfull": "Data Imported Successfully",
+    "importerror": "There was some issue with importing the file. Please check the error message",
+    "importfrom": "Import from {0}",
+    "stepstoimport": "Steps to import data from {name}",
+    "choosecsvimport": "Choose the {name} CSV and press the import button.",
+    "dontimportagain": "Make sure that you do not import the file again because that will create repeat entries.",
+    "checkpointsimportcsv": "Once you have checked all these points, just import the CSV below.",
+    "importhintunits": "Similiarly, make sure that the <u>Fuel Unit</u> and <u>Fuel Type</u> are correctly set in the Vehicle.",
+    "importhintcurrdist": "Make sure that the <u>Currency</u> and <u>Distance Unit</u> are set correctly in Hammond. Import will not autodetect Currency from the CSV but use the one set for the user.",
+    "importhintnickname": "Make sure that the Vehicle nickname in Hammond is exactly the same as the name on Fuelly CSV or the import will not work.",
+    "importhintvehiclecreated": "Make sure that you have already created the vehicles in Hammond platform.",
+    "importhintcreatecsv": "Export your data from {name} in the CSV format. Steps to do that can be found",
+    "here": "here",
     "unprocessedquickentries": "You have one quick entry to be processed. | You have {0} quick entries pending to be processed.",
     "show": "Show",
     "loginerror": "There was an error logging in to your account. {msg}",
