--- a/ui/src/locales/de.json
+++ b/ui/src/locales/de.json
@@ -13,7 +13,7 @@
     "addattachment": "Anhang hinzufügen",
     "sharedwith": "Geteilt mit",
     "share": "Teile",
-    "you": "Sie",
+    "you": "du",
     "addfillup": "Tankfüllung erfassen",
     "createfillup": "Erfasse Tankfüllung",
     "deletefillup": "Lösche diese Tankfüllung",
@@ -28,7 +28,7 @@
     "changepassword": "Passwort ändern",
     "oldpassword": "Bisheriges Passwort",
     "newpassword": "Neues Passwort",
-    "repeatnewpassword": "Neues Passwort wiederhiolen",
+    "repeatnewpassword": "Neues Passwort wiederholen",
     "passworddontmatch": "Passwörter stimmen nicht überein",
     "save": "Speichern",
     "supportthedeveloper": "Unterstütze den Entwickler",
@@ -56,7 +56,7 @@
     "password": "Passwort",
     "login": "Anmelden",
     "totalexpenses": "Gesamtausgaben",
-    "fillupcost": "Tank Ausgaben",
+    "fillupcost": "Tank-Ausgaben",
     "otherexpenses": "Andere Ausgaben",
     "addvehicle": "Fahrzeug hinzufügen",
     "editvehicle": "Fahrzeug bearbeiten",
@@ -124,17 +124,17 @@
     "name": "Name",
     "delete": "Löschen",
     "importdata": "Importiere Daten in Hammond",
-    "importdatadesc": "Wähle eine der folgenden Optionen um Daten in Hammond zu importieren",
+    "importdatadesc": "Wähle eine der folgenden Optionen, um Daten in Hammond zu importieren",
     "import": "Importieren",
-    "importcsv": "Wenn du {name} nutzt um deine Fahrzeugdaten zu verwalten, exportiere die CSV Datei aus {name} und klicke hier zum importieren.",
+    "importcsv": "Wenn du {name} nutzt, um deine Fahrzeugdaten zu verwalten, exportiere die CSV Datei aus {name} und klicke hier, um zu importieren.",
     "choosecsv": "CSV auswählen",
     "choosephoto": "Foto auswählen",
     "importsuccessfull": "Daten erfolgreich importiert",
-    "importerror": "Beim importieren der Datei ist ein Fehler aufgetreten. Details findest du in der Fehlermeldung",
+    "importerror": "Beim Importieren der Datei ist ein Fehler aufgetreten. Details findest du in der Fehlermeldung",
     "importfrom": "Importiere von {name}",
-    "stepstoimport": "Schritte um Daten aus {name} zu importieren",
-    "choosecsvimport": "Wähle die {name} CSV aus und klicke den Button zum importieren.",
-    "dontimportagain": "Achte darauf, dass du die Datei nicht erneut importierst, da dies zu wiederholten Einträgen führen würde.",
+    "stepstoimport": "Schritte, um Daten aus {name} zu importieren",
+    "choosecsvimport": "Wähle die {name} CSV aus und klicke den Button, um zu importieren.",
+    "dontimportagain": "Achte darauf, dass du die Datei nicht erneut importierst, da dies zu mehrfachen Einträgen führen würde.",
     "checkpointsimportcsv": "Wenn du alle diese Punkte überprüft hast kannst du unten die CSV importieren.",
     "importhintunits": "Vergewissere dich ebenfalls, dass die <u>Kraftstoffeinheit</u> und der <u>Kraftstofftyp</u> im Fahrzeug richtig eingestellt sind.",
     "importhintcurrdist": "Stelle sicher, dass die <u>Währung</u> und die <u>Entfernungseinheit</u> in Hammond korrekt eingestellt sind. Der Import erkennt die Währung nicht automatisch aus der CSV-Datei, sondern verwendet die für den Benutzer eingestellte Währung.",
@@ -156,11 +156,11 @@
     "created": "Erstellt",
     "createnewuser": "Erstelle neuen Benutzer",
     "cancel": "Abbrechen",
-    "novehicles": "Du hast noch kein Fahrzeug erstellt. Lege jetzt einen Eintrag für das zu Verwaltende Auto an.",
+    "novehicles": "Du hast noch kein Fahrzeug erstellt. Lege jetzt einen Eintrag für das zu verwaltende Fahrzeug an.",
     "processed": "Bearbeitet",
     "notfound": "Nicht gefunden",
     "timeout": "Das Laden der Seite hat eine Zeitüberschreitung verursacht. Bist du sicher, dass du noch mit dem Internet verbunden bist?",
-    "clicktoselect": "Klicke zum auswählen...",
+    "clicktoselect": "Klicke, um auszuwählen...",
     "expenseby": "Ausgabe von",
     "selectvehicle": "Wähle ein Fahrzeug aus",
     "expensedate": "Datum der Ausgabe",
@@ -168,11 +168,11 @@
     "fillmoredetails": "Weitere Details ausfüllen",
     "markquickentryprocessed": "Markiere gewählten Schnelleintrag als bearbeitet",
     "referquickentry": "Wähle Schnelleintrag",
-    "deletequickentry": "Willst du diesen Schnelleintrag wirklcih Löschen? Diese Aktion kann nicht rückgängig gemacht werden.",
+    "deletequickentry": "Willst du diesen Schnelleintrag wirklich löschen? Diese Aktion kann nicht rückgängig gemacht werden!",
     "fuelunit": "Kraftstoffeinheit",
     "fillingstation": "Tankstelle",
     "comments": "Kommentare",
-    "missfillupbefore": "Hast du vergessen die vorherige Tankfüllung zu erfassen?",
+    "missfillupbefore": "Hast du vergessen, die vorherige Tankfüllung zu erfassen?",
     "fillupdate": "Tankdatum",
     "fillupsavedsuccessfully": "Tankfüllung erfolgreich gespeichert",
     "expensesavedsuccessfully": "Ausgabe erfolgreich gespeichert",
@@ -184,7 +184,7 @@
     "make": "Marke",
     "model": "Modell",
     "yearmanufacture": "Jahr der Erstzulassung",
-    "enginesize": "Hubraum (in cc)",
+    "enginesize": "Hubraum (in ccm)",
     "testconn": "Teste Verbindung",
     "migrate": "Migrieren",
     "init": {
@@ -199,7 +199,7 @@
       "fresh": {
         "setupadminuser": "Erstelle einen Administrator",
         "yourpassword": "Dein Passwort",
-        "youremail": "Deine E-Mail Adresse",
+        "youremail": "Deine E-Mail-Adresse",
         "yourname": "Dein Name",
         "success": "Du hast dich erfolgreich registriert. Du wirst in kürze zur Anmeldung weitergeleitet und kannst Anfangen Hammond zu verwenden."
       }
